--- a/views/referenceViewPagesForSoronto/add-product.html
+++ b/views/referenceViewPagesForSoronto/add-product.html
@@ -114,8 +114,13 @@
                   <input type="text" class="form-control border-input" placeholder="enter the product name here...">
                 </div>
                 <div class="form-group">
-                  <h6>편집내용</h6>
-                  <textarea class="form-control textarea-limited" placeholder="This is a textarea limited to 150 characters." rows="13" maxlength="150"></textarea>
+                  <h6>요청내용</h6>
+                  <textarea class="form-control textarea-limited" placeholder="영상 종류:" rows="13" maxlength="150">
+영상 종류 :
+영상 길이 :
+편집 내용 :
+기한:
+                  </textarea>
                   <h5>
                     <small>
                       <span id="textarea-limited-message" class="pull-right">150자</span>
