--- a/views/referenceViewPagesForSoronto/login-page.html
+++ b/views/referenceViewPagesForSoronto/login-page.html
@@ -33,17 +33,16 @@
   <!-- CSS Files -->
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../assets/css/paper-kit.css?v=2.3.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="../assets/demo/demo.css" rel="stylesheet" />
+  <link href="../assets/css/login-page.css" rel="stylesheet" />
 </head>
 
 <body class="login-page full-screen sidebar-collapse">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-white fixed-top nav-down navbar-transparent" color-on-scroll="500">
+  <nav class="navbar navbar-expand-lg nav-down navbar-absolute navbar-transparent">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://demos.creative-tim.com/paper-kit-2-pro/index.html" rel="tooltip" title="Paper Kit 2 PRO" data-placement="bottom" target="_blank">
-          Paper Kit 2 Pro
+        <a class="navbar-brand" href="#" rel="tooltip" title="YoungPleasure" data-placement="bottom" target="_blank">
+          YoungPleasure영플 로고자리
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -51,129 +50,40 @@
           <span class="navbar-toggler-bar bar3"></span>
         </button>
       </div>
-      <div class="collapse navbar-collapse" data-nav-image="../assets/img/blurred-image-1.jpg" data-color="orange">
+      <div class="collapse navbar-collapse" data-nav-image="/assets/img/blurred-image-1.jpg" data-color="orange">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="https://bootstrapthemes.co" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              마켓플랫폼
+            </a>
+            <ul class="dropdown-menu dropdown-danger" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">의뢰하기</a>
+              <a class="dropdown-item" href="#">편집자들</a>
+            </ul>
+          </li>
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
-              Components </a>
+              대화메시지 </a>
             <div class="dropdown-menu dropdown-menu-right dropdown-danger">
-              <a href="../index.html" class="dropdown-item">
-                All Components
+              <a href="#" class="dropdown-item">
+                진행중인 작업 메시지
               </a>
-              <a href="../presentation.html" class="dropdown-item">
-                Presentation
-              </a>
-              <a href="https://demos.creative-tim.com/paper-kit-2-pro/docs/1.0/getting-started/introduction.html" class="dropdown-item">
-                Documentation
-              </a>
-            </div>
-          </li>
-          <li class="dropdown nav-item">
-            <a href="#" class="dropdown-toggle nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown">
-              Sections
-            </a>
-            <div class="dropdown-menu dropdown-menu-right dropdown-danger" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" data-scroll="true" data-id="#headers" href="../sections.html#headers">
-                <i class="nc-icon nc-tile-56"></i> Headers
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#features" href="../sections.html#features">
-                <i class="nc-icon nc-settings"></i> Features
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#blogs" href="../sections.html#blogs">
-                <i class="nc-icon nc-bullet-list-67"></i> Blogs
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#teams" href="../sections.html#teams">
-                <i class="nc-icon nc-single-02"></i> Teams
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#projects" href="../sections.html#projects">
-                <i class="nc-icon nc-calendar-60"></i> Projects
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#pricing" href="../sections.html#pricing">
-                <i class="nc-icon nc-money-coins"></i> Pricing
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#testimonials" href="../sections.html#testimonials">
-                <i class="nc-icon nc-badge"></i> Testimonials
-              </a>
-              <a class="dropdown-item" data-scroll="true" data-id="#contact-us" href="../sections.html#contactus">
-                <i class="nc-icon nc-mobile"></i> Contact Us
-              </a>
-            </div>
-          </li>
-          <li class="dropdown nav-item">
-            <a href="#" class="dropdown-toggle nav-link" id="navbarDropdownMenuLink1" data-toggle="dropdown">
-              Examples
-            </a>
-            <div class="dropdown-menu dropdown-menu-right dropdown-danger" aria-labelledby="navbarDropdownMenuLink1">
-              <a class="dropdown-item" href="../examples/about-us.html">
-                <i class="nc-icon nc-bank"></i> About-us
-              </a>
-              <a class="dropdown-item" href="../examples/add-product.html">
-                <i class="nc-icon nc-basket"></i> Add Product
-              </a>
-              <a class="dropdown-item" href="../examples/blog-post.html">
-                <i class="nc-icon nc-badge"></i> Blog Post
-              </a>
-              <a class="dropdown-item" href="../examples/blog-posts.html">
-                <i class="nc-icon nc-bullet-list-67"></i> Blog Posts
-              </a>
-              <a class="dropdown-item" href="../examples/contact-us.html">
-                <i class="nc-icon nc-mobile"></i> Contact Us
-              </a>
-              <a class="dropdown-item" href="../examples/discover.html">
-                <i class="nc-icon nc-world-2"></i> Discover
-              </a>
-              <a class="dropdown-item" href="../examples/ecommerce.html">
-                <i class="nc-icon nc-send"></i> Ecommerce
-              </a>
-              <a class="dropdown-item" href="../examples/landing-page.html">
-                <i class="nc-icon nc-spaceship"></i> Landing Page
-              </a>
-              <a class="dropdown-item" href="../examples/login-page.html">
-                <i class="nc-icon nc-lock-circle-open"></i> Login Page
-              </a>
-              <a class="dropdown-item" href="../examples/product-page.html">
-                <i class="nc-icon nc-album-2"></i> Product Page
-              </a>
-              <a class="dropdown-item" href="../examples/profile-page.html">
-                <i class="nc-icon nc-single-02"></i> Profile Page
-              </a>
-              <a class="dropdown-item" href="../examples/register-page.html">
-                <i class="nc-icon nc-bookmark-2"></i> Register Page
-              </a>
-              <a class="dropdown-item" href="../examples/search-with-sidebar.html">
-                <i class="nc-icon nc-zoom-split"></i> Search Page
-              </a>
-              <a class="dropdown-item" href="../examples/settings.html">
-                <i class="nc-icon nc-settings-gear-65"></i> Settings Page
-              </a>
-              <a class="dropdown-item" href="../examples/twitter-redesign.html">
-                <i class="nc-icon nc-tie-bow"></i> Twitter
+              <a href="#" class="dropdown-item">
+                완료된 작업 메시지
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="btn btn-round btn-danger" href="https://www.creative-tim.com/product/paper-kit-2-pro" target="_blank">
-              <i class="nc-icon nc-cart-simple"></i> Buy Now
+            <a href="#" class=" nav-link" id="navbarDropdownMenuLink2" >
+              충전소
             </a>
           </li>
-          <!-- <li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
-						<i class="fab fa-twitter"></i>
-						<p class="hidden-lg-up">Twitter</p>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
-						<i class="fab fa-facebook-square"></i>
-						<p class="hidden-lg-up">Facebook</p>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-						<i class="fab fa-instagram"></i>
-						<p class="hidden-lg-up">Instagram</p>
-					</a>
-				</li> -->
+          <li class="btn btn-round btn-danger nav-item">
+          <!--soronto//-->
+            <a class="nc-icon nc-cart-simple" style="color:white;" href="#" class="nav-link" id="navbarDropdownMenuLinks">
+              로그인
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -185,17 +95,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6 ml-auto mr-auto">
-            <div class="card card-register">
-              <h3 class="card-title">Welcome</h3>
+            <div class="card card-register" style="background-color:#fff;">
+              <h3 class="card-title">로그인</h3>
               <form class="register-form">
-                <label>Email</label>
-                <input type="email" class="form-control no-border" placeholder="Email">
-                <label>Password</label>
-                <input type="password" class="form-control no-border" placeholder="Password">
-                <button class="btn btn-danger btn-block btn-round">Register</button>
+                <label>이메일</label>
+                <input type="email" class="form-control" placeholder="Email">
+                <label>비밀번호</label>
+                <input type="password" class="form-control" placeholder="Password">
+                <button class="btn btn-danger btn-block btn-round">회원가입</button>
               </form>
               <div class="forgot">
-                <a href="#paper-kit" class="btn btn-link btn-danger">Forgot password?</a>
+                <a href="#paper-kit" class="btn btn-link btn-danger">로그인에 문제가 있나요?</a>
               </div>
             </div>
           </div>
@@ -204,7 +114,7 @@
           <h6>&copy;
             <script>
               document.write(new Date().getFullYear())
-            </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim</h6>
+            </script>, made with <i class="fa fa-heart heart"></i> by Hume</h6>
         </div>
       </div>
     </div>
