--- a/views/referenceViewPagesForSoronto/chatting-room.html
+++ b/views/referenceViewPagesForSoronto/chatting-room.html
@@ -7,6 +7,7 @@
   <title>
     Young Pleasure!!영상편집플랫폼
   </title>
+  <!---->
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -70,47 +71,24 @@
   <div class="chat-wrapper">
     <div class="chat-container">
         <div class="left">
-            <div class="top">
-                <input type="text" placeholder="Search" />
-                <a href="javascript:;" class="search"></a>
-            </div>
             <ul class="people">
                 <li class="person" data-chat="person1">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt="" />
-                    <span class="name">Thomas Bangalter</span>
+                    <span class="name">관리자</span>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">I was wondering...</span>
+                    <span class="preview">지금 가능하신가요?.</span>
                 </li>
                 <li class="person" data-chat="person2">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/dog.png" alt="" />
-                    <span class="name">Dog Woofson</span>
+                    <span class="name">편집자1</span>
                     <span class="time">1:44 PM</span>
-                    <span class="preview">I've forgotten how it felt before</span>
+                    <span class="preview">1처 편집 완료되었습니다.</span>
                 </li>
                 <li class="person" data-chat="person3">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/louis-ck.jpeg" alt="" />
-                    <span class="name">Louis CK</span>
+                    <span class="name">편집자2</span>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">But we’re probably gonna need a new carpet.</span>
-                </li>
-                <li class="person" data-chat="person4">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/bo-jackson.jpg" alt="" />
-                    <span class="name">Bo Jackson</span>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">It’s not that bad...</span>
-                </li>
-                <li class="person" data-chat="person5">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/michael-jordan.jpg" alt="" />
-                    <span class="name">Michael Jordan</span>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">Wasup for the third time like is 
-you blind bitch</span>
-                </li>
-                <li class="person" data-chat="person6">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/drake.jpg" alt="" />
-                    <span class="name">Drake</span>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">howdoyoudoaspace</span>
+                    <span class="preview">재생 소스에 문제가 발생했습니다.</span>
                 </li>
             </ul>
         </div>
@@ -135,22 +113,22 @@ you blind bitch</span>
                     <span>Today, 5:38 PM</span>
                 </div>
                 <div class="bubble you">
-                    Hello, can you hear me?
+                    안녕하세요.
                 </div>
                 <div class="bubble you">
-                    I'm in California dreaming
+                    저희는 캘리포니아 드리밍입니다.
                 </div>
                 <div class="bubble me">
-                    ... about who we used to be.
+                    저희가 사용한것에 대해..
                 </div>
                 <div class="bubble me">
-                    Are you serious?
+                    진짠가요?
                 </div>
                 <div class="bubble you">
-                    When we were younger and free...
+                    젊으면 더 싸죠. ㅎㅎ
                 </div>
                 <div class="bubble you">
-                    I've forgotten how it felt before
+                    제가 까먹고 있었어요. 녹여낼 것을
                 </div>
             </div>
             <div class="chat" data-chat="person3">
